<resources>
    <string name="app_name">SharedPreference</string>
    <string name="save">Save</string>
    <string name="enter_firstname">Enter FirstName</string>
    <string name="enter_lastname">Enter Lastname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_fullname">Enter Fullname</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
</resources>